--- a/index.html
+++ b/index.html
@@ -124,17 +124,27 @@
         <div class="row">
           <div class="col">
             <h3>Work</h3>
-            <p>Sushi Chef @ Sushi Pier (2019 - current), Sushi Sushi (2018 - 2021)</p>
+            <p>Sushi Chef @ Sushi Pier (2019 - current), Sushi Chef @ Sushi Sushi (2018 - 2021)</p>
             <ul>
               <li>Good communication skills - providing prompt, efficient and friendly service</li>
               <li>POS machine and cash handling</li>
               <li>Attention to detail</li>
               <li>High hygiene and cleanliness standards</li>
               <li>Ability to work in a team and independently</li>
-              <li>Food handling - producing clean, fresh sushi daily</li>
+              <li>Commercial awareness</li>
+              <li>Initiative</li>
+              <li>Resilience</li>
             </ul>
-            
-        
+            <p>Store Assistant @ John's Nuts (2017)</p>
+              <ul>
+                <li>POS Handling</li>
+                <li>Customer service</li>
+              </ul>
+            <p>Crew Member @ McDonalds (2014 - 2016)</p>
+            <ul>
+              <li>Food Handling</li>
+              <li>Working under pressure</li>
+            </ul>
           </div>
           <div class="col">
             <h3>Volunteer</h3>
@@ -187,6 +197,7 @@
           <div class="col">
             <a class="socials" href="mailto:julian.bitetto@gmail.com"">Email (julian.bitetto@gmail.com)</a>
             <a class="socials" href="https://www.linkedin.com/in/julian-bitetto/" target="_blank">LinkedIn (julian-bitetto)</a>
+            <a class="socials" href="./assets/misc/Julian Bitetto - resume.pdf" target="_blank">Resume (PDF)</a>
           </div>
         </div>
       </div>
