Updated projects section

--- a/index.html
+++ b/index.html
@@ -164,24 +164,21 @@
     <div id="projects" class="container-fluid">
       <div class="container section">
         <h2 id="project-h1">Projects</h2>      
-        <p class="subheading">Some cool, fun, personal things I've created in my spare time!</p>
+        <p class="subheading">Some cool, fun, personal things I've created in my spare time.</p>
         <div class="row">
-            <h3 class="project-h3">Procedural Terrain Generation</h3>
-            <p>Written in C#, I used Ken Perlin's noise algorithm to generate my own pseudo-infinite world.</p>
-            <div class="row">
-              <div class="col"><img class="img-fluid mx-auto d-block" src="./assets/images/tumblr_pcgtusPYK71vvh0m0o2_500.gif" data-toggle="modal" data-target="#myModal" onclick="modalImage(this)"/></div>
-              <div class="col"><img class="img-fluid mx-auto d-block" src="./assets//images/tumblr_f9a09fbcfb08f3576653110e92d40f50_7416bc89_1280.png" data-toggle="modal" data-target="#myModal" onclick="modalImage(this)"</div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col">
-              <h3 class="project-h3">Staying Heartbound (W.I.P)</h3>
-              <p>Utilising my general game development knowledge, I've been creating a small, work-in-progress, game.</p>
+            <h3 class="project-h3">Game Development</h3>
+            <div>
+              <p>Utilised C# and Godot Engine to create my own pseudo-infinite 3D landscape.</p>
               <div class="row">
-               <div class="col"><img class="img-fluid mx-auto d-block" src="./assets/images/lights.gif" data-toggle="modal" data-target="#myModal" onclick="modalImage(this)"/></div>
-               <div class="col"><img class="img-fluid mx-auto d-block" src="./assets//images/Kid_anim.gif" data-toggle="modal" data-target="#myModal" onclick="modalImage(this)"/></div>
-             </div>
-          </div>
+                <div class="col"><img class="img-fluid mx-auto d-block" src="./assets/images/tumblr_pcgtusPYK71vvh0m0o2_500.gif" data-toggle="modal" data-target="#myModal" onclick="modalImage(this)"/></div>
+                <div class="col"><img class="img-fluid mx-auto d-block" src="./assets//images/tumblr_f9a09fbcfb08f3576653110e92d40f50_7416bc89_1280.png" data-toggle="modal" data-target="#myModal" onclick="modalImage(this)"/></div>
+              </div>
+              <p>Utilised C#, GDscript, graphics software, and Godot Engine to create my own 2D scroller.</p>
+              <div class="row">
+                <div class="col"><img class="img-fluid mx-auto d-block" src="./assets/images/lights.gif" data-toggle="modal" data-target="#myModal" onclick="modalImage(this)"/></div>
+                <div class="col"><img class="img-fluid mx-auto d-block" src="./assets//images/Kid_anim.gif" data-toggle="modal" data-target="#myModal" onclick="modalImage(this)"/></div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -212,7 +209,7 @@
               <p>Built by Julian Bitetto</p>
             </div>
             <div id="footer-right" class="col">
-              <p>Last updated January, 2021</p>
+              <p>Last updated March, 2021</p>
             </div>
           </div>
         </div>
